added files from react-phaser template

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+#-------------------------------------
+#FROM REACT-PHASER TEMPLATE
+
+# System and IDE files
+Thumbs.db
+.DS_Store
+.idea
+*.suo
+*.sublime-project
+*.sublime-workspace
+
+# Vendors
+node_modules/
+
+# Build
+dist/
+/npm-debug.log
+
+
+#-------------------------------------
+
+
+
+
 # Logs
 logs
 *.log
