--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^5.0.0",
-    
+    "phaser": "3.23.0",
+    "planck-js": "^0.3.31",
     "react-redux": "^7.0.2",
     "style-loader": "^2.0.0"
   }
