--- a/package.json
+++ b/package.json
@@ -1,53 +1,18 @@
 {
-  "name": "phaser3-project-template",
-  "version": "1.1.0",
-  "description": "A Phaser 3 Project Template",
-  "main": "src/index.js",
+  "name": "pew-pew-spaceman",
+  "version": "1.0.0",
+  "description": "pew",
+  "main": "server/server.js",
   "scripts": {
-    "build": "webpack --config webpack/prod.js ",
-    "start": "webpack serve --config webpack/base.js --open Chrome.exe"
+    "start": "node server/server.js --ignore client",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/photonstorm/phaser3-project-template.git"
-  },
-  "author": "Taylor Nodell and Richard Davey <rdavey@gmail.com> (http://www.photonstorm.com)",
-  "license": "MIT",
-  "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
-  "bugs": {
-    "url": "https://github.com/photonstorm/phaser3-project-template/issues"
-  },
-  "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.0.5",
-    "canvas": "^2.9.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "path": "^0.12.7",
-    "raw-loader": "^4.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "terser-webpack-plugin": "^4.2.2",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^5.1.4"
-  },
-  "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^5.0.0",
-    "phaser": "3.23.0",
-    "planck-js": "^0.3.31",
-    "react-redux": "^7.0.2",
-    "style-loader": "^2.0.0"
+    "concurrently": "^5.3.0"
   }
 }
