--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^5.0.0",
+    "phaser": "^3.55.2",
+    "planck-js": "^0.3.31",
     "react-redux": "^7.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
