--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
-    "build": "react-scripts build",
-    "start": "react-scripts start"
+    "build": "webpack --config webpack/prod.js ",
+    "start": "webpack serve --config webpack/base.js --open Chrome.exe"
   },
   "license": "MIT",
   "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
@@ -37,7 +37,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^5.0.0",
-    "phaser": "^3.55.2",
+    "phaser": "3.23.0",
     "planck-js": "^0.3.31",
     "react-redux": "^7.0.2",
     "react-router-dom": "^6.3.0",
