--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
-    "start": "webpack serve --config webpack/base.js --open Chrome.exe"
+    "start": "webpack --config webpack/base.js "
   },
   "license": "MIT",
   "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
