--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "webpack-merge": "^5.1.4"
   },
   "dependencies": {
+    "webpack-cli": "^4.3.1",
     "@apollo/client": "^3.5.10",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
