--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,6 @@
     "canvas": "^2.9.1",
     "clean-webpack-plugin": "^3.0.0",
     "file-loader": "^6.0.0",
-
     "path": "^0.12.7",
     "raw-loader": "^4.0.1",
     "react": "^16.8.6",
@@ -32,40 +31,40 @@
     "webpack-merge": "^5.1.4"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "canvas": "^2.9.1",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.0",
     "file-loader": "^6.0.0",
-    
+    "graphql": "^16.3.0",
+    "html-webpack-plugin": "^4.3.0",
+    "jwt-decode": "^3.1.2",
     "path": "^0.12.7",
+    "phaser": "3.23.0",
+    "planck-js": "^0.3.31",
     "raw-loader": "^4.0.1",
     "react": "^16.8.6",
+    "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.2.2",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^5.1.4",
-    "html-webpack-plugin": "^4.3.0",
-    "@apollo/client": "^3.5.10",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^5.0.0",
-    "graphql": "^16.3.0",
-    "phaser": "3.23.0",
-    "planck-js": "^0.3.31",
-    "react-apollo-hooks": "^0.5.0",
-    "react-redux": "^7.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "style-loader": "^2.0.0"
+    "webpack-merge": "^5.1.4"
   },
   "browserslist": {
     "production": [
