--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "phaser3-project-template",
   "version": "1.1.0",
+  "engines": {
+    "node": "16.x"
+  },
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
