--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,8 @@
   "name": "phaser3-project-template",
   "version": "1.1.0",
   "engines": {
-    "node": "16.x"
+    "node": "16.x",
+    "npm": "^8.5.5"
   },
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
