--- a/client/package.json
+++ b/client/package.json
@@ -49,8 +49,9 @@
     "canvas": "^2.9.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
+    "dotenv": "^16.0.0",
     "file-loader": "^6.0.0",
-    "graphql": "^16.3.0",
+    "graphql": "^16.4.0",
     "html-webpack-plugin": "^4.3.0",
     "jwt-decode": "^3.1.2",
     "path": "^0.12.7",
