--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,9 @@
   "dependencies": {
     "apollo-server-express": "^3.6.2",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.5.1",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.6"
   },
