--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,11 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.8.0",
+    "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6",
-    "webpack-cli": "^4.9.2"
+    "nodemon": "^2.0.6"
   }
 }
