--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack --config webpack/prod.js ",
+    "build": "react-scripts build",
     "start": "webpack --config webpack/base.js "
   },
   "license": "MIT",
