--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "(SET INLINE_RUNTIME_CHUNK=false) && react-scripts build",
     "start": "webpack --config webpack/base.js "
   },
   "license": "MIT",
